--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/index.html">
+    <meta http-equiv="refresh" content="0; url=https://watermelon.cool">
     <title>Redirection</title>
 </head>
 <body>
