--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://watermelon.cool">
     <title>Redirection</title>
 </head>
 <body>
-    Si la redirection ne fonctionne pas, <a href="/index.html">cliquez ici</a>.
+    If the redirection does not work, <a href="https://watermelon.cool">click here</a>.
 </body>
 </html>
