--- a/apis/index.html
+++ b/apis/index.html
@@ -39,6 +39,10 @@ a:hover{text-decoration: underline;}
 
 <br>
 
+<a target="_blank" href="https://www.infomaniak.com/fr/support/faq/2065/limites-du-nombre-de-mails-sortants#:~:text=Le%20nombre%20d%27e%2Dmails,kSuite%20(Standard%2C%20etc.)">Infomaniak Mail - Français - Limites</a><br>
+
+<br>
+
 <a target="_blank" href="https://business.whatsapp.com/products/platform-pricing?lang=en_US">WhatsApp - English - Pricing</a><br>
 <a target="_blank" href="https://business.whatsapp.com/products/platform-pricing?lang=fr_FR">WhatsApp - Français - Tarifs</a><br>
 
