--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 <!-- STYLE -->
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-body,html{background:rgb(255, 255, 255); font-family:'Roboto', sans-serif; margin:0; padding:0;}
+body,html{background:black; color:white; font-family:'Roboto', sans-serif; margin:0; padding:0;}
 #pagenotfound{width:100%; text-align:center; padding-top:47vh; font-weight:700; font-size: 30px;}
 
 </style>
