--- a/apis/index.html
+++ b/apis/index.html
@@ -18,7 +18,7 @@
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 body,html{background:black; color:white; font-family:'Roboto', sans-serif; font-size:14px; font-weight:400; margin:20px; line-height: 155%;}
-a{color:black;text-decoration: none; font-size:18px; font-weight:700;}
+a{color:white;text-decoration: none; font-size:18px; font-weight:700;}
 a:hover{text-decoration: underline;}
 </style>
 
