--- a/en/index.html
+++ b/en/index.html
@@ -15,7 +15,7 @@
 <meta property="og:description" content="Watermelon develops customized automation solutions to help businesses save time and money. Our highly customizable robots can automate client searching, data collection, message responses, and much more. Contact us now to get a quote and discover how Watermelon can improve your company's productivity." />
 
 <!-- AUTRES -->
-<script src="/code/redirect.js"></script>
+<!--script src="/code/redirect.js"></script-->
 <link rel="stylesheet" href="/code/homepage.css">
 
 </head>
@@ -41,7 +41,7 @@ We develop customized automation solutions to help you save time and money.
 </div>
 
 <a href="#contacturl"><div id="btn">
-    Get a Quote
+    Meet an Expert
 </div></a>
 
 </div>
@@ -81,18 +81,30 @@ Did you know that the vast majority of tasks we do every day on our computers or
     <li><b>Recruitment</b>, software can search for candidates, analyze resumes, administer tests, etc.</li>
 </ul> 
 
-<div id="contacturl"></div>
+</div>
+
 <div id="contact">
-<div class="titre2">Get a Quote</div>
-    <div><img src="/img/phone.svg"> +41 79 291 87 21</div>
+<div class="titre2">Meet an Expert</div>
     <a href="mailto:klim@watermelon.cool"><div><img src="/img/mail.svg"> klim@watermelon.cool</div></a>
-    <a href="https://wa.me/41792918721"><div><img src="/img/whatsapp.svg"> WhatsApp</div></a>
-    <a href="https://telegram.me/watermelongram"><div><img src="/img/telegram.svg"> Telegram</div></a>
+    <div><img src="/img/phone.svg"> +41 79 291 87 21</div>
+    <div class="form"><img src="img/form.svg">Contact Form</div>
+    <div><img src="img/calendar.svg">Schedule an Appointment</div>
 </div>
 
 
+<div id="form">
+    <form id="monformulaire">
+        <input type="text" name="nom" class="nom" placeholder="Last Name" required><input type="text" name="prenom" class="prenom" placeholder="First Name" required>
+        <br>
+        <input type="tel" name="telephone" class="telephone" placeholder="Phone" required><input type="email" name="email" class="email" placeholder="Email" required>
+        <br>
+        <textarea name="message" class="message" placeholder="Message" required></textarea>
+        <br>
+        <input type="submit" class="button" value="Send">
+    </form>
+    <div id="feedback" style="display:none;">Thank you for getting in touch! Your request is being processed, and our team will respond to you as soon as possible.</div>
+    </div>
 
-</div>
 
 <div id="bottom">© <span id="annee"></span> Watermelon Sàrl</div>
 
