--- a/fr/index.html
+++ b/fr/index.html
@@ -1,11 +1,119 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/index.html">
-    <title>Redirection</title>
+
+<!-- META -->
+<meta charset="utf-8">
+<title>Watermelon</title>
+<meta name="robots" content="index,follow">
+<meta name="description" id="description" property="description" content="Watermelon propose des solutions d'automatisation sur-mesure pour aider les entreprises à gagner du temps et de l'argent. Nos robots ultra-personnalisables peuvent automatiser la recherche de clients, la collecte de données, les réponses aux messages et bien plus encore.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
+<!-- OPEN GRAPH -->
+<meta property="og:image" content="img/automation.png" />
+<meta property="og:title" content="Watermelon - Automatisation pour entreprise" />
+<meta property="og:description" content="Watermelon développe des solutions d'automatisation sur-mesure pour aider les entreprises à gagner du temps et de l'argent. Nos robots ultra-personnalisables peuvent automatiser la recherche de clients, la collecte de données, les réponses aux messages et bien plus encore. Demandez-nous un devis dès maintenant pour découvrir comment Watermelon peut améliorer la productivité de votre entreprise." />
+
+<!-- AUTRES -->
+<!--script src="code/redirect.js"></script-->
+<link rel="stylesheet" href="code/homepage.css">
+
 </head>
 <body>
-    Si la redirection ne fonctionne pas, <a href="/index.html">cliquez ici</a>.
+
+<img id="logo" src="img/watermelon.svg">
+<div id="top">Watermelon</div>
+
+
+
+<div id="introtexte">
+
+<div class="titre">Automatisation<br>pour entreprise</div>
+<div class="titre">Recherche de clients<br>automatisée</div>
+<div class="titre">Collecte de données<br>automatisée</div>
+<div class="titre">Boîte mail<br>intelligente</div>
+<div class="titre">Synchronisation<br>de logiciels</div>
+<div class="titre">Synchronisation<br>des données</div>
+<div class="titre">Création<br>d'applications</div>
+
+<div class="soustitre">
+Nous développons des solutions d'automatisation sur-mesure afin de vous faire gagner du temps et de l'argent.
+</div>
+
+<a href="#contact"><div id="btn">
+Rencontrer un expert
+</div></a>
+
+</div>
+
+
+
+<img id="image" src="img/laptop.svg">
+
+
+
+
+
+<div id="corps">
+
+<div class="titre2">99% de nos tâches quotidiennes peuvent être automatisées</div>
+<div class="texte">
+Savez-vous que la grande majorité des tâches que l'on a à faire tous les jours sur notre ordinateur ou smartphone peuvent être automatisées ?
+Ceci est aujourd'hui possible grâce à l'intelligence artificielle et à l'automatisation.
+Un mailbot peut par exemple lire nos emails, les comprendre et y répondre.
+Nous lui donnons nos instructions et il peut ensuite prendre nos rendez-vous ou envoyer des offres à notre place.
+Il est également possible d'automatiser la recherche de nouveaux clients, la collecte de données, le recrutement et beaucoup d'autres choses.
+</div>
+
+<div id="reassurance">
+<div><img src="img/time.svg"> Temps gagné</div>
+<div><img src="img/arrow.svg"> Productivité améliorée</div>
+<div><img src="img/error.svg"> Taux d'erreurs réduit</div>
+</div>
+
+<div class="titre2">Nos robots peuvent être integrés à vos logiciels</div>
+<div class="texte">
+Nos robots sont ultra-personnalisables et ils peuvent être integrés à n'importe lequel de vos logiciels et plateformes que vous utilisez :
+WordPress, Salesforce, Hubspot, Microsoft Excel, Google Ads, Slack, Zoom, Google Calendar, Shopify, WhatsApp ...
+</div>
+
+<div class="titre2">Quelques exemples de ce que l'on peut automatiser</div>
+<ul>
+    <li><b>Réponses aux messages</b> (emails, WhatsApp, SMS...), une intelligence artificielle peut fixer des rendez-vous, envoyer des offres...</li>
+    <li><b>Vos réseaux sociaux</b>, une IA peut créer du contenu (images, textes...) et le publier.</li>
+    <li><b>Recherche de clients</b>, un robot peut rechercher sur internet vos clients potentiels et les contacter.</li>
+    <li><b>Collecte de données</b>, un robot peut récupérer très rapidement les données de n'importe quel site web.</li>
+    <li><b>Le recrutement</b>, un logiciel peut rechercher des candidats, analyser les CV, faire passer des tests...</li>
+</ul> 
+
+</div>
+
+<div id="contact">
+<div class="titre2">Rencontrer un expert</div>
+    <a href="mailto:klim@watermelon.cool"><div><img src="img/mail.svg">klim@watermelon.cool</div></a>
+    <div><img src="img/phone.svg">+41 79 291 87 21</div>
+    <div class="form"><img src="img/form.svg">Formulaire de contact</div>
+    <div><img src="img/calendar.svg">Programmer un rendez-vous</div>
+</div>
+
+
+<div id="form">
+<form id="monformulaire">
+    <input type="text" name="nom" class="nom" placeholder="Nom" required><input type="text" name="prenom" class="prenom" placeholder="Prénom" required>
+    <br>
+    <input type="tel" name="telephone" class="telephone" placeholder="Téléphone" required><input type="email" name="email" class="email" placeholder="Email" required>
+    <br>
+    <textarea name="message" class="message" placeholder="Message" required></textarea>
+    <br>
+    <input type="submit" class="button" value="Envoyer">
+</form>
+<div id="feedback" style="display:none;">Merci pour votre prise de contact ! Votre demande est en cours de traitement et notre équipe vous répondra dans les plus brefs délais.</div>
+</div>
+
+
+<div id="bottom">© <span id="annee"></span> Watermelon Sàrl</div>
+
+<script src="code/homepage.js"></script>
+
 </body>
 </html>
