--- a/de/index.html
+++ b/de/index.html
@@ -15,7 +15,7 @@
 <meta property="og:description" content="Watermelon bietet maßgeschneiderte Automatisierungslösungen, um Unternehmen Zeit und Geld zu sparen. Unsere ultrapersonalisierbaren Roboter können die Kundenakquise, Datensammlung, Nachrichtenantwort und vieles mehr automatisieren. Fordern Sie noch heute ein Angebot an, um herauszufinden, wie Watermelon die Produktivität Ihres Unternehmens verbessern kann." />
 
 <!-- AUTRES -->
-<script src="/code/redirect.js"></script>
+<!--script src="/code/redirect.js"></script-->
 <link rel="stylesheet" href="/code/homepage.css">
 
 </head>
@@ -41,7 +41,7 @@
 </div>
 
 <a href="#contacturl"><div id="btn">
-    Ein Angebot erhalten
+    Einen Experten treffen
 </div></a>
 
 </div>
@@ -86,18 +86,30 @@
     <li><b>Rekrutierung</b>, eine Software kann Kandidaten suchen, Lebensläufe analysieren, Tests durchführen...</li>
 </ul> 
 
-<div id="contacturl"></div>
+</div>
+
 <div id="contact">
-<div class="titre2">Ein Angebot erhalten</div>
-    <div><img src="/img/phone.svg"> +41 79 291 87 21</div>
+<div class="titre2">Einen Experten treffen</div>
     <a href="mailto:klim@watermelon.cool"><div><img src="/img/mail.svg"> klim@watermelon.cool</div></a>
-    <a href="https://wa.me/41792918721"><div><img src="/img/whatsapp.svg"> WhatsApp</div></a>
-    <a href="https://telegram.me/watermelongram"><div><img src="/img/telegram.svg"> Telegram</div></a>
+    <div><img src="/img/phone.svg"> +41 79 291 87 21</div>
+    <div class="form"><img src="img/form.svg">Kontaktformular</div>
+    <div><img src="img/calendar.svg">Einen Termin vereinbaren</div>
 </div>
 
 
+<div id="form">
+    <form id="monformulaire">
+        <input type="text" name="nom" class="nom" placeholder="Nachname" required><input type="text" name="prenom" class="prenom" placeholder="Vorname" required>
+        <br>
+        <input type="tel" name="telephone" class="telephone" placeholder="Telefon" required><input type="email" name="email" class="email" placeholder="E-Mail" required>
+        <br>
+        <textarea name="message" class="message" placeholder="Nachricht" required></textarea>
+        <br>
+        <input type="submit" class="button" value="Senden">
+    </form>
+    <div id="feedback" style="display:none;">Vielen Dank für Ihre Kontaktaufnahme! Ihre Anfrage wird bearbeitet und unser Team wird Ihnen so schnell wie möglich antworten.</div>
+    </div>
 
-</div>
 
 <div id="bottom">© <span id="annee"></span> Watermelon Sàrl</div>
 
