--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 Nous développons des solutions d'automatisation sur-mesure afin de vous faire gagner du temps et de l'argent.
 </div>
 
-<a href="#contacturl"><div id="btn">
-Obtenir un devis
+<a href="#contact"><div id="btn">
+Rencontrer un expert
 </div></a>
 
 </div>
@@ -86,18 +86,30 @@ WordPress, Salesforce, Hubspot, Microsoft Excel, Google Ads, Slack, Zoom, Google
     <li><b>Le recrutement</b>, un logiciel peut rechercher des candidats, analyser les CV, faire passer des tests...</li>
 </ul> 
 
-<div id="contacturl"></div>
-<div id="contact" class="box">
-<div class="titre2">Obtenir un devis</div>
-    <div><img src="img/phone.svg"> +41 79 291 87 21</div>
-    <a href="mailto:klim@watermelon.cool"><div><img src="img/mail.svg"> klim@watermelon.cool</div></a>
-    <a href="https://wa.me/41792918721"><div><img src="img/whatsapp.svg"> WhatsApp</div></a>
-    <a href="https://telegram.me/watermelongram"><div><img src="img/telegram.svg"> Telegram</div></a>
+</div>
+
+<div id="contact">
+<div class="titre2">Rencontrer un expert</div>
+    <a href="mailto:klim@watermelon.cool"><div><img src="img/mail.svg">klim@watermelon.cool</div></a>
+    <div><img src="img/phone.svg">+41 79 291 87 21</div>
+    <div class="form"><img src="img/form.svg">Formulaire de contact</div>
+    <div><img src="img/calendar.svg">Programmer un rendez-vous</div>
 </div>
 
 
-
+<div id="form">
+<form id="monformulaire">
+    <input type="text" name="nom" class="nom" placeholder="Nom" required><input type="text" name="prenom" class="prenom" placeholder="Prénom" required>
+    <br>
+    <input type="tel" name="telephone" class="telephone" placeholder="Téléphone" required><input type="email" name="email" class="email" placeholder="Email" required>
+    <br>
+    <textarea name="message" class="message" placeholder="Message" required></textarea>
+    <br>
+    <input type="submit" class="button" value="Envoyer">
+</form>
+<div id="feedback" style="display:none;">Merci pour votre prise de contact ! Votre demande est en cours de traitement et notre équipe vous répondra dans les plus brefs délais.</div>
 </div>
+
 
 <div id="bottom">© <span id="annee"></span> Watermelon Sàrl</div>
 
