--- a/en/index.html
+++ b/en/index.html
@@ -87,8 +87,8 @@ Did you know that the vast majority of tasks we do every day on our computers or
 <div class="titre2">Meet an Expert</div>
     <a href="mailto:klim@watermelon.cool"><div><img src="/img/mail.svg"> klim@watermelon.cool</div></a>
     <div><img src="/img/phone.svg"> +41 79 291 87 21</div>
-    <div class="form"><img src="img/form.svg">Contact Form</div>
-    <div><img src="img/calendar.svg">Schedule an Appointment</div>
+    <div class="form"><img src="/img/form.svg">Contact Form</div>
+    <div><img src="/img/calendar.svg">Schedule an Appointment</div>
 </div>
 
 
