--- a/fr/index.html
+++ b/fr/index.html
@@ -10,18 +10,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
 <!-- OPEN GRAPH -->
-<meta property="og:image" content="img/automation.png" />
+<meta property="og:image" content="/img/automation.png" />
 <meta property="og:title" content="Watermelon - Automatisation pour entreprise" />
 <meta property="og:description" content="Watermelon développe des solutions d'automatisation sur-mesure pour aider les entreprises à gagner du temps et de l'argent. Nos robots ultra-personnalisables peuvent automatiser la recherche de clients, la collecte de données, les réponses aux messages et bien plus encore. Demandez-nous un devis dès maintenant pour découvrir comment Watermelon peut améliorer la productivité de votre entreprise." />
 
 <!-- AUTRES -->
-<!--script src="code/redirect.js"></script-->
-<link rel="stylesheet" href="code/homepage.css">
+<!--script src="/code/redirect.js"></script-->
+<link rel="stylesheet" href="/code/homepage.css">
 
 </head>
 <body>
 
-<img id="logo" src="img/watermelon.svg">
+<img id="logo" src="/img/watermelon.svg">
 <div id="top">Watermelon</div>
 
 
@@ -48,7 +48,7 @@ Rencontrer un expert
 
 
 
-<img id="image" src="img/laptop.svg">
+<img id="image" src="/img/laptop.svg">
 
 
 
@@ -66,9 +66,9 @@ Il est également possible d'automatiser la recherche de nouveaux clients, la co
 </div>
 
 <div id="reassurance">
-<div><img src="img/time.svg"> Temps gagné</div>
-<div><img src="img/arrow.svg"> Productivité améliorée</div>
-<div><img src="img/error.svg"> Taux d'erreurs réduit</div>
+<div><img src="/img/time.svg"> Temps gagné</div>
+<div><img src="/img/arrow.svg"> Productivité améliorée</div>
+<div><img src="/img/error.svg"> Taux d'erreurs réduit</div>
 </div>
 
 <div class="titre2">Nos robots peuvent être integrés à vos logiciels</div>
@@ -90,10 +90,10 @@ WordPress, Salesforce, Hubspot, Microsoft Excel, Google Ads, Slack, Zoom, Google
 
 <div id="contact">
 <div class="titre2">Rencontrer un expert</div>
-    <a href="mailto:klim@watermelon.cool"><div><img src="img/mail.svg">klim@watermelon.cool</div></a>
-    <div><img src="img/phone.svg">+41 79 291 87 21</div>
-    <div class="form"><img src="img/form.svg">Formulaire de contact</div>
-    <div><img src="img/calendar.svg">Programmer un rendez-vous</div>
+    <a href="mailto:klim@watermelon.cool"><div><img src="/img/mail.svg">klim@watermelon.cool</div></a>
+    <div><img src="/img/phone.svg">+41 79 291 87 21</div>
+    <div class="form"><img src="/img/form.svg">Formulaire de contact</div>
+    <div><img src="/img/calendar.svg">Programmer un rendez-vous</div>
 </div>
 
 
@@ -113,7 +113,7 @@ WordPress, Salesforce, Hubspot, Microsoft Excel, Google Ads, Slack, Zoom, Google
 
 <div id="bottom">© <span id="annee"></span> Watermelon Sàrl</div>
 
-<script src="code/homepage.js"></script>
+<script src="/code/homepage.js"></script>
 
 </body>
 </html>
