--- a/de/index.html
+++ b/de/index.html
@@ -92,8 +92,8 @@
 <div class="titre2">Einen Experten treffen</div>
     <a href="mailto:klim@watermelon.cool"><div><img src="/img/mail.svg"> klim@watermelon.cool</div></a>
     <div><img src="/img/phone.svg"> +41 79 291 87 21</div>
-    <div class="form"><img src="img/form.svg">Kontaktformular</div>
-    <div><img src="img/calendar.svg">Einen Termin vereinbaren</div>
+    <div class="form"><img src="/img/form.svg">Kontaktformular</div>
+    <div><img src="/img/calendar.svg">Einen Termin vereinbaren</div>
 </div>
 
 
