--- a/ru/index.html
+++ b/ru/index.html
@@ -93,8 +93,8 @@
 <div class="titre2">Встреча с экспертом</div>
     <a href="mailto:klim@watermelon.cool"><div><img src="/img/mail.svg"> klim@watermelon.cool</div></a>
     <div><img src="/img/phone.svg"> +41 79 291 87 21</div>
-    <div class="form"><img src="img/form.svg">Форма обратной связи</div>
-    <div><img src="img/calendar.svg">Запланировать встречу</div>
+    <div class="form"><img src="/img/form.svg">Форма обратной связи</div>
+    <div><img src="/img/calendar.svg">Запланировать встречу</div>
 </div>
 
 
