--- a/de/index.html
+++ b/de/index.html
@@ -40,7 +40,7 @@
     Wir bieten maßgeschneiderte Automatisierungslösungen, um Unternehmen Zeit und Geld zu sparen.
 </div>
 
-<a href="#contacturl"><div id="btn">
+<a href="#contacturl"><div class="btn">
     Einen Experten treffen
 </div></a>
 
@@ -140,7 +140,7 @@
     <input type="tel" name="telephone" class="telephone" placeholder="Telefon" required><input type="email" name="email" class="email" placeholder="E-Mail" required>
     <br>
     <textarea name="message" class="message" placeholder="Nachricht" required></textarea>
-    <input type="submit" class="button" value="Senden">
+    <input type="submit" class="btn" value="Senden">
 </form>
 <div class="feedback">Ihre Nachricht ist eingegangen, Sie werden in Kürze eine Antwort erhalten.</div>
 </div>
