--- a/en/index.html
+++ b/en/index.html
@@ -40,7 +40,7 @@
 We develop customized automation solutions to help you save time and money.
 </div>
 
-<a href="#contacturl"><div id="btn">
+<a href="#contacturl"><div class="btn">
     Meet an Expert
 </div></a>
 
@@ -135,7 +135,7 @@ Did you know that the vast majority of tasks we do every day on our computers or
         <input type="tel" name="telephone" class="telephone" placeholder="Phone" required><input type="email" name="email" class="email" placeholder="Email" required>
         <br>
         <textarea name="message" class="message" placeholder="Message" required></textarea>
-        <input type="submit" class="button" value="Send">
+        <input type="submit" class="btn" value="Send">
     </form>
     <div class="feedback">Your message has been received, you will get a response shortly.</div>
     </div>
