--- a/ru/index.html
+++ b/ru/index.html
@@ -45,7 +45,7 @@
     Мы разрабатываем индивидуальные решения для автоматизации, чтобы вы экономили время и деньги.
 </div>
 
-<a href="#contacturl"><div id="btn">
+<a href="#contacturl"><div class="btn">
     Встреча с экспертом
 </div></a>
 
@@ -141,7 +141,7 @@
         <input type="tel" name="telephone" class="telephone" placeholder="Телефон" required><input type="email" name="email" class="email" placeholder="Электронная почта" required>
         <br>
         <textarea name="message" class="message" placeholder="Сообщение" required></textarea>
-        <input type="submit" class="button" value="Отправить">
+        <input type="submit" class="btn" value="Отправить">
     </form>
     <div class="feedback">Ваше сообщение было получено, скоро вы получите ответ.</div>
     </div>
