--- a/de/index.html
+++ b/de/index.html
@@ -40,7 +40,7 @@
     Wir bieten maßgeschneiderte Automatisierungslösungen, um Unternehmen Zeit und Geld zu sparen.
 </div>
 
-<a href="#contacturl"><div class="btn">
+<a href="#contact"><div class="btn">
     Einen Experten treffen
 </div></a>
 
