--- a/en/index.html
+++ b/en/index.html
@@ -40,7 +40,7 @@
 We develop customized automation solutions to help you save time and money.
 </div>
 
-<a href="#contacturl"><div class="btn">
+<a href="#contact"><div class="btn">
     Meet an Expert
 </div></a>
 
