--- a/ru/index.html
+++ b/ru/index.html
@@ -45,7 +45,7 @@
     Мы разрабатываем индивидуальные решения для автоматизации, чтобы вы экономили время и деньги.
 </div>
 
-<a href="#contacturl"><div class="btn">
+<a href="#contact"><div class="btn">
     Встреча с экспертом
 </div></a>
 
