--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@ WordPress, Salesforce, Hubspot, Microsoft Excel, Google Ads, Slack, Zoom, Google
 
 <div id="contact">
 <div class="titre1">Contact</div>
-    <div><img src="img/mail.svg">klim@watermelon.cool</div>
-    <div><img src="img/phone.svg">+41 79 291 87 21</div>
+    <div><img src="img/mail.svg">klim@watermelon.cool</div><br>
+    <div><img src="img/phone.svg">+41 79 291 87 21</div><br>
+    <a href="https://www.linkedin.com/in/klimpo/"><div><img src="img/linkedin.svg">LinkedIn</div></a>
 </div>
 
 
@@ -146,6 +147,42 @@ WordPress, Salesforce, Hubspot, Microsoft Excel, Google Ads, Slack, Zoom, Google
 </form>
 <div class="feedback">Votre message est bien arrivé, vous recevrez une réponse prochainement.</div>
 </div>
+
+<!--div id="chat">
+
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+  <div class="bubble1">Comment je peux vous aider ?</div>
+  <div class="bubble2">Oui j'ai une question au sujet de ...</div>
+
+  <input type="text" placeholder="Votre message ici">
+</div-->
 
 
 
