--- a/de/index.html
+++ b/de/index.html
@@ -89,10 +89,11 @@
 </div>
 
 <div id="contact">
-<div class="titre1">Kontakt</div>
-    <div><img src="/img/mail.svg"> klim@watermelon.cool</div>
-    <div><img src="/img/phone.svg"> +41 79 291 87 21</div>
-</div>
+  <div class="titre1">Contact</div>
+      <div><img src="/img/mail.svg">klim@watermelon.cool</div><br>
+      <div><img src="/img/phone.svg">+41 79 291 87 21</div><br>
+      <a href="https://www.linkedin.com/in/klimpo/"><div><img src="/img/linkedin.svg">LinkedIn</div></a>
+  </div>
 
 
 <div id="calendar">
