--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
 
 <div id="introtexte">
 
-<div class="titre">Automatisation<br>pour entreprise</div>
+<div class="titre">Automatisation<br>digitale</div>
+<div class="titre">Automatisation<br>d'entreprise</div>
+<div class="titre">Création<br>d'applications</div>
+<div class="titre">Automatisation<br>du marketing</div>
 <div class="titre">Recherche de clients<br>automatisée</div>
-<div class="titre">Collecte de données<br>automatisée</div>
-<div class="titre">Boîte mail<br>intelligente</div>
 <div class="titre">Synchronisation<br>de logiciels</div>
 <div class="titre">Synchronisation<br>des données</div>
-<div class="titre">Création<br>d'applications</div>
+<div class="titre">Collecte de données<br>automatisée</div>
+<div class="titre">Boîte mail<br>intelligente</div>
 
 <div class="soustitre">
 Nous développons des solutions d'automatisation sur-mesure afin de vous faire gagner du temps et de l'argent.
