--- a/de/index.html
+++ b/de/index.html
@@ -27,14 +27,15 @@
 
 
 <div id="introtexte">
-
-<div class="titre">Automatisierung<br>für Unternehmen</div>
-<div class="titre">Automatisierte<br>Kundensuche</div>
-<div class="titre">Automatisierte<br>Datensammlung</div>
-<div class="titre">Intelligenter<br>Mailbox</div>
-<div class="titre">Software<br>Synchronisation</div>
-<div class="titre">Daten<br>Synchronisation</div>
-<div class="titre">Erstellung von<br>Anwendungen</div>
+  
+  <div class="title">Digitale<br>Automatisierung</div>
+  <div class="title">Erstellung<br>von Webseiten</div>
+  <div class="title">App-Entwicklung</div>
+  <div class="title">Softwareentwicklung</div>
+  <div class="title">Erstellung von<br>Chatbots</div>
+  <div class="title">Marketing<br>Automatisierung</div>
+  <div class="title">API-<br>Integrationen</div>
+  <div class="title">Automatisierte<br>Systeme</div>
 
 <div class="soustitre">
     Wir bieten maßgeschneiderte Automatisierungslösungen, um Unternehmen Zeit und Geld zu sparen.
