--- a/ru/index.html
+++ b/ru/index.html
@@ -34,12 +34,14 @@
 
 <div id="introtexte">
 
-<div class="titre">Автоматизация<br>для бизнеса</div>
-<div class="titre">Автоматизированный<br>поиск клиентов</div>
-<div class="titre">Автоматизированный<br>сбор данных</div>
-<div class="titre">Умный<br>почтовый ящик</div>
-<div class="titre">Синхронизация<br>данных</div>
-<div class="titre">Создание<br>приложений</div>
+  <div class="title">Цифровая<br>автоматизация</div>
+  <div class="title">Создание<br>веб-сайтов</div>
+  <div class="title">Разработка<br>приложений</div>
+  <div class="title">Разработка<br>программного обеспечения</div>
+  <div class="title">Создание<br>чат-ботов</div>
+  <div class="title">Автоматизация<br>маркетинга</div>
+  <div class="title">Интеграция<br>API</div>
+  <div class="title">Автоматизированные<br>системы</div>
 
 <div class="soustitre">
     Мы разрабатываем индивидуальные решения для автоматизации, чтобы вы экономили время и деньги.
