--- a/en/index.html
+++ b/en/index.html
@@ -28,15 +28,14 @@
 
 <div id="introtexte">
 
-<div class="titre">Digital<br>Automation</div>
-<div class="titre">Business<br>Automation</div>
-<div class="titre">Application<br>Development</div>
-<div class="titre">Marketing<br>Automation</div>
-<div class="titre">Automated<br>Client Search</div>
-<div class="titre">Software<br>Synchronization</div>
-<div class="titre">Data<br>Synchronization</div>
-<div class="titre">Automated<br>Data Collection</div>
-<div class="titre">Smart<br>Mailbox</div>
+  <div class="title">Digital<br>Automation</div>
+  <div class="title">Website<br>Creation</div>
+  <div class="title">App<br>Development</div>
+  <div class="title">Software<br>Development</div>
+  <div class="title">Chatbot<br>Creation</div>
+  <div class="title">Marketing<br>Automation</div>
+  <div class="title">API<br>Integrations</div>
+  <div class="title">Automated<br>Systems</div>
 
 <div class="soustitre">
 We develop customized automation solutions to help you save time and money.
