--- a/de/index.html
+++ b/de/index.html
@@ -28,14 +28,14 @@
 
 <div id="introtexte">
   
-  <div class="title">Digitale<br>Automatisierung</div>
-  <div class="title">Erstellung<br>von Webseiten</div>
-  <div class="title">App-Entwicklung</div>
-  <div class="title">Softwareentwicklung</div>
-  <div class="title">Erstellung von<br>Chatbots</div>
-  <div class="title">Marketing<br>Automatisierung</div>
-  <div class="title">API-<br>Integrationen</div>
-  <div class="title">Automatisierte<br>Systeme</div>
+  <div class="titre">Digitale<br>Automatisierung</div>
+  <div class="titre">Erstellung<br>von Webseiten</div>
+  <div class="titre">App-Entwicklung</div>
+  <div class="titre">Softwareentwicklung</div>
+  <div class="titre">Erstellung von<br>Chatbots</div>
+  <div class="titre">Marketing<br>Automatisierung</div>
+  <div class="titre">API-<br>Integrationen</div>
+  <div class="titre">Automatisierte<br>Systeme</div>
 
 <div class="soustitre">
     Wir bieten maßgeschneiderte Automatisierungslösungen, um Unternehmen Zeit und Geld zu sparen.
