--- a/ru/index.html
+++ b/ru/index.html
@@ -34,14 +34,14 @@
 
 <div id="introtexte">
 
-  <div class="title">Цифровая<br>автоматизация</div>
-  <div class="title">Создание<br>веб-сайтов</div>
-  <div class="title">Разработка<br>приложений</div>
-  <div class="title">Разработка<br>программного обеспечения</div>
-  <div class="title">Создание<br>чат-ботов</div>
-  <div class="title">Автоматизация<br>маркетинга</div>
-  <div class="title">Интеграция<br>API</div>
-  <div class="title">Автоматизированные<br>системы</div>
+  <div class="titre">Цифровая<br>автоматизация</div>
+  <div class="titre">Создание<br>веб-сайтов</div>
+  <div class="titre">Разработка<br>приложений</div>
+  <div class="titre">Разработка<br>программного обеспечения</div>
+  <div class="titre">Создание<br>чат-ботов</div>
+  <div class="titre">Автоматизация<br>маркетинга</div>
+  <div class="titre">Интеграция<br>API</div>
+  <div class="titre">Автоматизированные<br>системы</div>
 
 <div class="soustitre">
     Мы разрабатываем индивидуальные решения для автоматизации, чтобы вы экономили время и деньги.
