--- a/ru/index.html
+++ b/ru/index.html
@@ -37,11 +37,11 @@
   <div class="titre">Цифровая<br>автоматизация</div>
   <div class="titre">Создание<br>веб-сайтов</div>
   <div class="titre">Разработка<br>приложений</div>
-  <div class="titre">Разработка<br>программного обеспечения</div>
+  <div class="title">Разработка<br>програм</div>
   <div class="titre">Создание<br>чат-ботов</div>
   <div class="titre">Автоматизация<br>маркетинга</div>
   <div class="titre">Интеграция<br>API</div>
-  <div class="titre">Автоматизированные<br>системы</div>
+  <div class="title">Автоматизация<br>систем</div>
 
 <div class="soustitre">
     Мы разрабатываем индивидуальные решения для автоматизации, чтобы вы экономили время и деньги.
