--- a/de/index.html
+++ b/de/index.html
@@ -31,7 +31,7 @@
   <div class="titre">Digitale<br>Automatisierung</div>
   <div class="titre">Erstellung<br>von Webseiten</div>
   <div class="titre">App-<br>Entwicklung</div>
-  <div class="title">Software<br>Entwicklung</div>
+  <div class="titre">Software<br>Entwicklung</div>
   <div class="titre">Erstellung von<br>Chatbots</div>
   <div class="titre">Marketing<br>Automatisierung</div>
   <div class="titre">API-<br>Integrationen</div>
