--- a/ru/index.html
+++ b/ru/index.html
@@ -19,9 +19,9 @@
 <link rel="stylesheet" href="/code/homepage.css">
 
 <style>
-@media screen and (max-width: 800px) { 
+/* @media screen and (max-width: 800px) { 
 .titre{font-size:7.5vw;}
-}
+}*/
 </style>
 
 </head>
