--- a/de/index.html
+++ b/de/index.html
@@ -27,15 +27,14 @@
 
 
 <div id="introtexte">
-  
-  <div class="titre">Digitale<br>Automatisierung</div>
-  <div class="titre">Erstellung<br>von Webseiten</div>
-  <div class="titre">App-<br>Entwicklung</div>
-  <div class="titre">Software<br>Entwicklung</div>
-  <div class="titre">Erstellung von<br>Chatbots</div>
+
+  <div class="titre">Firmen<br>Automatisierung</div>
+  <div class="titre">Künstliche<br>Intelligenz</div>
+  <div class="titre">Apps, Software<br>und E-Shops</div>
   <div class="titre">Marketing<br>Automatisierung</div>
-  <div class="titre">API-<br>Integrationen</div>
+  <div class="titre">Chatbots<br>und Mailbots</div>
   <div class="titre">Automatisierte<br>Systeme</div>
+  <div class="titre">API<br>Integrationen</div>
 
 <div class="soustitre">
     Wir bieten maßgeschneiderte Automatisierungslösungen, um Unternehmen Zeit und Geld zu sparen.
