--- a/fr/index.html
+++ b/fr/index.html
@@ -28,14 +28,13 @@
 
 <div id="introtexte">
 
-  <div class="titre">Automatisation<br>digitale</div>
-  <div class="titre">Création<br>de sites web</div>
-  <div class="titre">Création<br>d'apps</div>
-  <div class="titre">Création<br>de logiciels</div>
-  <div class="titre">Robots de<br>conversation</div>
+  <div class="titre">Automatisation<br>d'entreprise</div>
+  <div class="titre">Intelligence<br>artificielle</div>
+  <div class="titre">Apps, logiciels<br>et e-shops</div>
   <div class="titre">Automatisation<br>du marketing</div>
-  <div class="titre">Intégrations<br>d'API</div>
+  <div class="titre">Chatbots<br>et mailbots</div>
   <div class="titre">Systèmes<br>automatisés</div>
+  <div class="titre">Intégrations<br>d'API</div>
 
 <div class="soustitre">
 Nous développons des solutions d'automatisation sur-mesure afin de vous faire gagner du temps et de l'argent.
