--- a/ru/index.html
+++ b/ru/index.html
@@ -34,14 +34,14 @@
 
 <div id="introtexte">
 
-  <div class="titre">Цифровая<br>автоматизация</div>
-  <div class="titre">Создание<br>веб-сайтов</div>
-  <div class="titre">Разработка<br>приложений</div>
-  <div class="titre">Разработка<br>програм</div>
-  <div class="titre">Создание<br>чат-ботов</div>
-  <div class="titre">Автоматизация<br>маркетинга</div>
-  <div class="titre">Интеграция<br>API</div>
-  <div class="titre">Автоматизация<br>систем</div>
+
+<div class="titre">Автоматизация<br>бизнеса</div>
+<div class="titre">Искусственный<br>интеллект</div>
+<div class="titre">Приложения, софт<br>и e-магазины</div>
+<div class="titre">Автоматизация<br>маркетинга</div>
+<div class="titre">Чат-боты<br>и почтовые боты</div>
+<div class="titre">Автоматизация<br>систем</div>
+<div class="titre">Интеграция<br>API</div>
 
 <div class="soustitre">
     Мы разрабатываем индивидуальные решения для автоматизации, чтобы вы экономили время и деньги.
