--- a/en/index.html
+++ b/en/index.html
@@ -28,14 +28,13 @@
 
 <div id="introtexte">
 
-  <div class="titre">Digital<br>Automation</div>
-  <div class="titre">Website<br>Creation</div>
-  <div class="titre">App<br>Development</div>
-  <div class="titre">Software<br>Development</div>
-  <div class="titre">Chatbot<br>Creation</div>
+  <div class="titre">Business Automation<br></div>
+  <div class="titre">Artificial<br>Intelligence</div>
+  <div class="titre">Apps, Software<br>and E-shops</div>
   <div class="titre">Marketing<br>Automation</div>
-  <div class="titre">API<br>Integrations</div>
+  <div class="titre">Chatbots<br>and Mailbots</div>
   <div class="titre">Automated<br>Systems</div>
+  <div class="titre">API<br>Integrations</div>
 
 <div class="soustitre">
 We develop customized automation solutions to help you save time and money.
