--- a/index.html
+++ b/index.html
@@ -28,22 +28,20 @@
 
 <div id="introtexte">
 
-<div class="titre">Automatisation<br>digitale</div>
-<div class="titre">Création<br>de sites web</div>
-<div class="titre">Création<br>d'apps</div>
-<div class="titre">Création<br>de logiciels</div>
-<div class="titre">Robots de<br>conversation</div>
-<div class="titre">Automatisation<br>du marketing</div>
-<div class="titre">Intégrations<br>d'API</div>
-<div class="titre">Systèmes<br>automatisés</div>
-
-
-<!--div class="titre">Recherche de clients<br>automatisée</div>
 <div class="titre">Automatisation<br>d'entreprise</div>
+<div class="titre">Intelligence<br>artificielle</div>
+<div class="titre">Apps, logiciels<br>et e-shops</div>
+<div class="titre">Automatisation<br>du marketing</div>
+<div class="titre">Chatbots<br>et mailbots</div>
+<div class="titre">Systèmes<br>automatisés</div>
+<div class="titre">Intégrations<br>d'API</div>
+
+<!--
+<div class="titre">Recherche de clients<br>automatisée</div>
 <div class="titre">Synchronisation<br>de logiciels</div>
 <div class="titre">Synchronisation<br>des données</div>
 <div class="titre">Collecte de données<br>automatisée</div>
-<div class="titre">Boîte mail<br>intelligente</div-->
+-->
 
 
 <div class="soustitre">
