--- a/de/index.html
+++ b/de/index.html
@@ -28,13 +28,14 @@
 
 <div id="introtexte">
 
-  <div class="titre">Firmen<br>Automatisierung</div>
-  <div class="titre">Künstliche<br>Intelligenz</div>
-  <div class="titre">Apps, Software<br>und E-Shops</div>
+  <div class="titre">Unternehmens<br>Automatisierung</div>
+  <div class="titre">Apps, Software<br>und Webseiten</div>
+  <div class="titre">Online<br>Shops</div>
   <div class="titre">Marketing<br>Automatisierung</div>
   <div class="titre">Chatbots<br>und Mailbots</div>
   <div class="titre">Automatisierte<br>Systeme</div>
   <div class="titre">API<br>Integrationen</div>
+  
 
 <div class="soustitre">
     Wir bieten maßgeschneiderte Automatisierungslösungen, um Unternehmen Zeit und Geld zu sparen.
