--- a/fr/index.html
+++ b/fr/index.html
@@ -29,8 +29,8 @@
 <div id="introtexte">
 
   <div class="titre">Automatisation<br>d'entreprise</div>
-  <div class="titre">Intelligence<br>artificielle</div>
-  <div class="titre">Apps, logiciels<br>et e-shops</div>
+  <div class="titre">Apps, logiciels<br>et sites web</div>
+  <div class="titre">Boutiques<br>en ligne</div>
   <div class="titre">Automatisation<br>du marketing</div>
   <div class="titre">Chatbots<br>et mailbots</div>
   <div class="titre">Systèmes<br>automatisés</div>
