--- a/ru/index.html
+++ b/ru/index.html
@@ -34,14 +34,13 @@
 
 <div id="introtexte">
 
-
-<div class="titre">Автоматизация<br>бизнеса</div>
-<div class="titre">Искусственный<br>интеллект</div>
-<div class="titre">Приложения, софт<br>и e-магазины</div>
-<div class="titre">Автоматизация<br>маркетинга</div>
-<div class="titre">Чат-боты<br>и почтовые боты</div>
-<div class="titre">Автоматизация<br>систем</div>
-<div class="titre">Интеграция<br>API</div>
+  <div class="titre">Автоматизация<br>бизнеса</div>
+  <div class="titre">Приложения, софт<br>и веб-сайты</div>
+  <div class="titre">Интернет<br>магазины</div>
+  <div class="titre">Автоматизация<br>маркетинга</div>
+  <div class="titre">Чат-боты<br>и почтовые боты</div>
+  <div class="titre">Автоматизированные<br>системы</div>
+  <div class="titre">Интеграция<br>API</div>
 
 <div class="soustitre">
     Мы разрабатываем индивидуальные решения для автоматизации, чтобы вы экономили время и деньги.
