--- a/ru/index.html
+++ b/ru/index.html
@@ -38,8 +38,8 @@
   <div class="titre">Приложения, софт<br>и веб-сайты</div>
   <div class="titre">Интернет<br>магазины</div>
   <div class="titre">Автоматизация<br>маркетинга</div>
-  <div class="titre">Чат-боты<br>и почтовые боты</div>
-  <div class="titre">Автоматизированные<br>системы</div>
+  <div class="titre">Чат-боты и<br>почтовые боты</div>
+  <div class="titre">Автоматизация<br>систем</div>
   <div class="titre">Интеграция<br>API</div>
 
 <div class="soustitre">
