--- a/404.html
+++ b/404.html
@@ -11,14 +11,9 @@
 
 <!-- STYLE -->
 <style>
-body,html{text-align:center; background: rgb(30,30,35) ; display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Utilisez 100% de la hauteur de la vue */
-    margin: 0; /* Enlève la marge par défaut */
-    padding:0;
-}
-img{width:100%; vertical-align:middle; }
+body,html { width:100%; background: rgb(30,30,35); text-align:center; }
+img{width:50%; margin-top:100px; }
+
 @media screen and (max-width: 900px) {
     img{width:90%; }
 }
