--- a/404.html
+++ b/404.html
@@ -11,11 +11,11 @@
 
 <!-- STYLE -->
 <style>
-body,html { width:100%; background: rgb(30,30,35); text-align:center; }
-img{width:50%; margin-top:100px; }
+body,html { margin:0; padding:0; width:100%; background: rgb(30,30,35); text-align:center; }
+img{width:50%; padding:0;  margin-top:100px; }
 
 @media screen and (max-width: 900px) {
-    img{width:90%; }
+    img{ width:90%; }
 }
 
 
