--- a/lang.html
+++ b/lang.html
@@ -15,7 +15,7 @@
 <meta property="og:description" content="Language" />
 
 <!-- AUTRES -->
-<link rel="stylesheet" href="/code/style.css">
+<link rel="stylesheet" href="code/style.css">
 
 </head>
 <body>
