--- a/lang.html
+++ b/lang.html
@@ -14,8 +14,21 @@
 <meta property="og:title" content="Watermelon - Language" />
 <meta property="og:description" content="Language" />
 
-<!-- AUTRES -->
-<link rel="stylesheet" href="code/style.css">
+<!-- STYLE -->
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+:root{background:black;}
+body,html{ background-color: black; color:white; font-family:'Roboto', Helvetica, Arial, sans-serif; font-size:15px; font-weight:700; scroll-behavior: smooth; margin:0; padding:0; line-height: 155%;}
+a{color:white; text-decoration:none; cursor:pointer; }
+a:hover {cursor:pointer !important;}
+
+#lang {width:100%; height:100vh; padding: 100px 0; }
+#lang a {width:300px; margin-left:auto; margin-right:auto; display:block; color:white; font-size:20px; padding:20px; border-bottom:solid 1px rgb(40,40,42); }
+#lang a:hover{background:rgb(40,40,42); }
+#lang .noborder {border-bottom:none;}
+
+</style>
 
 </head>
 <body>
